// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button (snapshot) 1`] = `
<div
  className="button"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  Base Button
  
  
</div>
`;

exports[`Button Base Button Disabled (snapshot) 1`] = `
<div
  className="button button--disabled"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  Base Button Disabled
  
  
</div>
`;

exports[`Button CTA Button (snapshot) 1`] = `
<div
  className="button button--CTA"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  CTA Button
  
  
</div>
`;

exports[`Button CTA Button Disabled (snapshot) 1`] = `
<div
  className="button button--disabled button--CTA"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  CTA Button Disabld
  
  
</div>
`;

exports[`Button Secondary Button (snapshot) 1`] = `
<div
  className="button button--secondary"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  Secondary Button
  
  
</div>
`;

exports[`Button Secondary Button disabled (snapshot) 1`] = `
<div
  className="button button--disabled button--secondary"
  onBlur={undefined}
  onClick={[Function]}
  tabIndex={undefined}
>
  Secondary Button Disabled
  
  
</div>
`;
